Fixed White space problem

--- a/src/app/Views/home/jumbotron/jumbotron.component.css
+++ b/src/app/Views/home/jumbotron/jumbotron.component.css
@@ -7,7 +7,7 @@
 }
 .jumbotronInnerContainer {
   margin-top: 0px;
-  top: 35%;
+  top: 100px;
   position: relative;
 }
 
